<resources>
    <string name="app_name">UNMSM QR SCAN</string>
    <string name="microphone">Microfono</string>
    <string name="background">background</string>
    <string name="explora">Explora</string>
    <string name="lector_nfc">Lector NFC</string>
    <string name="lector_qr">Lector QR</string>
    <string name="precios">Precios</string>
    <string name="mapa">Mapa</string>
    <string name="tarifas_image">Tarifas</string>
    <string name="listen_again">Qué quieres saber</string>
    <string name="check_internet_connection">Please check your Internet connection</string>
    <string name="asr_permission">BiodomoAssistant must access the microphone in order to perform speech recognition</string>
    <string name="asr_permission_notgranted">Sorry, Biodomo Assistant cannot work without accessing the microphone</string>
    <string name="asr_error">Speech recognition error</string>
    <string name="asr_error_audio"> Audio recording error</string>
    <string name="asr_error_client">Unknown client side error</string>
    <string name="asr_error_permissions">Insufficient permissions</string>
    <string name="asr_error_network">Network related error</string>
    <string name="asr_error_networktimeout">Network operation timed out</string>
    <string name="asr_error_nomatch">¿No dices nada? Aquí te estoy esperando..</string>
    <string name="asr_error_recognizerbusy">Recognition service busy</string>
    <string name="asr_error_server">Server sends error status</string>
    <string name="asr_error_speechtimeout">Aquí te espero</string>
    <string name="asr_notstarted">Speech recognition could not be started</string>
    <string name="donde_se_almacena_la_imagen">Donde se almacena la imagen</string>
    <string name="boton_left">Boton left</string>
    <string name="boton_right">Boton right</string>
    <string name="nfc_activity_name">NFC Activity</string>
    <string name="nfc_message">Hold a tag against the back of your device</string>
    <string name="zone_amazonia_title">Amazonia</string>
    <string name="zone_amazonia_desc">La Amazonia no sólo abarca el bosque tropical más grande que queda en el mundo, sino que también es hogar de una de cada diez especies conocidas en la Tierra.</string>
    <string name="zone_madagascar_title">Madagascar</string>
    <string name="zone_madagascar_desc">La isla de Madagascar ha desarrollado un ecosistema propio y distintivo, con una extraordinaria biodiversidad, desde su separación del continente africano hace aproximadamente 160 millones de años.</string>
    <string name="zone_ip_title">Indo pacifico</string>
    <string name="zone_ip_desc">El sudeste asiático es una de las zonas del planeta que alberga mayor biodiversidad. Allí se encuentran importantes ecorregiones como las del Río Mekong o el Sulawesi.</string>
    <string name="mad_a_0_title">Lémur de cola anillada</string>
    <string name="mad_a_1_title">Cucaracha de Madagascar</string>
    <string name="mad_a_2_title">Turaco cariblanco</string>
    <string name="mad_v_0_title">Tulipero de Gabon</string>
    <string name="mad_v_1_title">Palma del viajero</string>
    <string name="mad_v_2_title">Pandano</string>
    <string name="mad_v_3_title">Flamboyán</string>
    <string name="mad_v_4_title">Ciruelo de los cafres</string>
    <string name="mad_v_5_title">Baobab</string>
    <string name="mad_v_6_title">Árbol del coral africano</string>
    <string name="mad_v_7_title">Ajo lavanda</string>
    <string name="mad_v_8_title">Ave del paraíso</string>
    <string name="mad_v_9_title">Bignonia del Cabo</string>
    <string name="mad_v_10_title">Drago</string>
    <string name="mad_v_11_title">Lirio del Nilo</string>
    <string name="mad_v_12_title">Palmera del Senegal</string>
    <string name="mad_v_13_title">Palmera triangular</string>
    <string name="mad_v_14_title">Schotia</string>
    <string name="mad_v_15_title">Ave del paraíso blanca</string>
    <string name="mad_a_0_text">Lemur catta. Es un primate de hábitos estrictamente diurnos que pasa la mayor parte del tiempo en los árboles, aunque también frecuenta el suelo. Es sociable y vive en grupos de 5 a 25 individuos. Es polígamo y usa su característica cola para hacer señales visuales y odoríferas. Cuando camina por el suelo mantiene erguida la cola para señalar su presencia al resto de sus congéneres. También se comunica por vocalizaciones, por actitudes corporales y por expresiones del rostro. Se alimenta de frutos, hojas, flores, cortezas y pequeños insectos.</string>
    <string name="mad_a_1_text">Gromphadorhina portentosa. Es una de las mayores cucarachas que existen. Carece de alas y es una excelente escaladora. Progenitores y crías permanecen juntos largos periodos de tiempo. Pueden expulsar aire por los poros respiratorios del abdomen produciendo un sonido característico. Vive en la madera muerta y come restos vegetales.</string>
    <string name="mad_a_2_text">Tauraco leucotis. Ave de vivos colores y una cresta sobre la cabeza que pueden levantar a voluntad. Sus colores rojo y verde se deben a pigmentos producidos por esta a ve. Es ruidosa y emite una penetrante llamada de alarma. Construye nidos grandes y sencillos con ramas y pone dos huevos. Come frutas y pequeños artrópodos. Es endémica del este africano.</string>
    <string name="mad_v_0_text">Spathodea campanulata. Árbol nativo de las selvas tropicales secas de la Costa Este de África que alcanza los 25 m de altura, pero está muy extendido en todas las zonas tropicales del mundo. Las flores son rojo anaranjadas y se comportan como una copa reteniendo agua de lluvia que atrae numerosas aves. El fruto es una cápsula ligeramente leñoso que se abre en dos valvas. Está encuadrada entre las 100 plantas más invasoras del mundo.</string>
    <string name="mad_v_1_text">Ravenala madagascariensis. Planta herbácea perenne que alcanza 10 m. Es endémica de Madagascar donde vive en llanuras y pastizales con agua abundante por debajo de 800 m. Se ha introducido en otras islas como Mauricio o Reunión comportándose como invasora. Las hojas crecen en un solo plano con forma de abanico. Las flores son hermafroditas de color blanco crema y crecen desde las axilas de las hojas. Son polinizadas por el lémur negro.</string>
    <string name="mad_v_2_text">Pandanus utilis. Arbusto endémico de Madagascar y naturalizado en áreas de clima subtropical. El tronco es recto, liso y redondeado. Tiene raíces que surgen del tallo por encima del suelo que ayudan a soportar la planta. La ramificación dicotómica forma una copa piramidal. Es perenne con hojas insertadas en espiral a lo largo del tronco. Son grandes, lineares y de bordes aserrados. Las flores masculinas y femeninas están en plantas diferentes. El fruto es una piña colgante comestible.</string>
    <string name="mad_v_3_text">Delonix regia. Árbol originario de la selva seca de Madagascar donde está en peligro de extinción, aunque se ha naturalizado en muchos lugares del mundo de clima tropical. Es caduco o semiperenne de follaje denso y hojas doblemente divididas. Tiene bonitas flores anaranjadas y el fruto es una legumbre leñosa larga y plana que contiene semillas pequeñas. Se utiliza como instrumento de percusión. La corteza y las flores se usan en remedios contra el reuma y el asma bronquial.</string>
    <string name="mad_v_4_text">Harpephyllum caffrum. Árbol de bosques costeros del sudeste de África, desde El Cabo a Mozambique. Perenne. Copa compacta y redondeada. Tronco recto liso que se vuelve rugoso con el tiempo. Hojas compuestas, verde oscuras por el haz y más claras por el envés. A los dos años enrojecen y caen. Las flores masculinas y femeninas se encuentran en árboles separados. Fruto en drupa rojo, carnoso, en racimos. Se usa para fabricar muebles o para tallar.</string>
    <string name="mad_v_5_text">Adansonia grandidieri. Es un árbol caduco de los bosques secos de Madagascar que alcanza 25 m. Su tronco puede tener 11 m de diámetro y sus ramas sin hojas recuerdan las raíces de un árbol. Su madera, sin cercos anuales, es semejante a una esponja, ya que puede almacenar 90.000 l de agua para poder sobrevivir durante los periodos de sequía. A la corteza le salen nudos e irregularidades en la superficie. Contiene una fibra muy resistente que la protege de los incendios. El fruto es parecido a un melón con múltiples semillas grandes y aplanadas.</string>
    <string name="mad_v_6_text">Erythrina caffra. Es un pequeño árbol caduco de 3 a 7 m nativo del sureste de África. Tiene las ramas cubiertas de espinas. Crece en los bosques costeros sudafricanos hasta los 200 m de altitud. Es frecuentemente en parques por sus brillantes flores anaranjadas y la sombra que proporciona. Las flores son ricas en néctar que atrae aves favoreciendo la polinización. El fruto es una legumbre cilíndrica leñosa que contienen semillas de color rojo vivo. Se utiliza para fabricar juguetes, vallas y medicinas.</string>
    <string name="mad_v_7_text">Tulbaghia violácea. Planta herbácea del Sur de África. Es perenne y soporta bien los ambientes marinos. Tiene una base bulbosa y las hojas son largas y acintadas de color verde vivo. Las flores tubulares con pétalos abiertos en estrella de color malva. El fruto es una cápsula. Emana un fuerte olor a ajo. Se utiliza localmente como medicinal.</string>
    <string name="mad_v_8_text">Strelitzia reginae. Herbácea tropical originaria de Sudáfrica. Perenne que alcanza redondeadas, 1,5 m de altura. Tiene tallos subterráneos que acumulan sustancias de reserva. Las hojas son persistentes, grandes, verde grisáceas y ovaladas. Los tallos tienen forma de pico de ave y mantienen de 5 a 8 ﬂores anaranjadas. El fruto es una cápsula trilocular en la que se forman semillas negras, redondeadas, con arilo naranja y plumoso.</string>
    <string name="mad_v_9_text">Cape honeysuckle. Arbusto originario de Sudáfrica. Semitrepador, perenne, de porte erecto con largas y ﬂexibles ramas que se apoyan sobre otros arbustos para alcanzar la luz. Puede llegar a 3 m de altura. Las ﬂores son tubulares y se agrupan en largos racimos al ﬁnal de las ramas. Su color va del naranja al rojo. Son muy apreciadas por los insectos y las aves por su gran cantidad de néctar. Fruto en cápsula con numerosas semillas.</string>
    <string name="mad_v_10_text">Dracaena draco. Herbácea que se comporta como un árbol pero carece de crecimiento en grosor. El tallo es único y suculento, ramiﬁcado en altura, que forma una copa abovedada. El follaje es persistente, carnoso, de hojas lineares. Las ﬂores son pequeñas de color blanco y desprenden una agradable fragancia. Se encuentran en racimos terminales. La savia se torna roja en contacto con el aire. Tiene propiedades medicinales y se usa en la fabricación de tintes y barnices.</string>
    <string name="mad_v_11_text">Agapanthus africanus. Planta herbácea originaria de Sudáfrica que puede alcanzar los 60 cm de altura. Perenne. El tallo es corto pero del que salen largas hojas acintadas de color verde intenso. Las ﬂores se agrupan en la parte superior en inﬂorescencias de color blanco, azul o violeta. Tiene raíces carnosas gruesas y compactas. Es una planta resistente al fuego.</string>
    <string name="qr_app">SM-QRApp</string>
    <string name="brujula">brujula del explora button</string>
    <string name="boton_web">boton web</string>
    <string name="boton_yt">boton yt</string>
    <string name="boton_twitter">boton twitter</string>
    <string name="boton_fb">boton fb</string>
    <string name="tucan_del_boton_amazonia_de_explora">tucan del boton amazonia de explora</string>
    <string name="mono_del_boton_de_explora">Mono del boton de explora</string>
    <string name="pez_del_boton_de_explora">Pez del boton de explora</string>
</resources>