<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/background_v"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/background"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/background_v"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/speech_button" />

    <ImageView
        android:id="@+id/background_v_arriba"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/background"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/background_v"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <ImageButton
        android:id="@+id/speech_button"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/transparente"
        android:contentDescription="@string/microphone"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/explora_button"
        android:layout_width="341dp"
        android:layout_height="205dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/explora_mad_button"
        android:contentDescription="@string/explora"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/mapa_button"
        app:layout_constraintStart_toStartOf="@+id/qr_button"
        app:layout_constraintTop_toBottomOf="@+id/background_v_arriba" />

    <ImageView
        android:id="@+id/explora_brujula"
        android:layout_width="110dp"
        android:layout_height="124dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/brujula"
        android:src="@drawable/explora_brujula"
        app:layout_constraintStart_toStartOf="@+id/explora_button"
        app:layout_constraintTop_toTopOf="@+id/explora_button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif"
        android:text="@string/qr_app"
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/background_v_arriba"
        app:layout_constraintEnd_toEndOf="@+id/background_v_arriba"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/exploraText"
        android:layout_width="212dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:text="Bienvenido !"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/explora_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/explora_brujula"
        app:layout_constraintTop_toTopOf="@+id/explora_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="233dp"
        android:layout_height="90dp"
        android:layout_marginTop="12dp"
        android:text="Descubre las novedades de Pregrado, Postgrado y Planes de
estudio de cada Facultad !"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/exploraText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/exploraText"
        app:layout_constraintTop_toBottomOf="@+id/exploraText" />

    <ImageButton
        android:id="@+id/mapa_button"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="132dp"
        android:background="@drawable/mapa_button_bar"
        android:contentDescription="@string/mapa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_v_arriba" />

    <ImageButton
        android:id="@+id/qr_button"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/lectorqr_button_bar"
        android:contentDescription="@string/lector_qr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_v_arriba" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="90dp"
        android:layout_height="25dp"
        android:layout_marginStart="44dp"
        android:text="@string/lector_qr"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/qr_button"
        app:layout_constraintStart_toStartOf="@+id/qr_button"
        app:layout_constraintTop_toTopOf="@+id/qr_button"
        app:layout_constraintVertical_bias="0.466" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="70dp"
        android:layout_height="23dp"
        android:layout_marginStart="45dp"
        android:text="@string/mapa"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/mapa_button"
        app:layout_constraintStart_toStartOf="@+id/mapa_button"
        app:layout_constraintTop_toTopOf="@+id/mapa_button" />

    <ImageButton
        android:id="@+id/fb_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/fbicon"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/background_v"
        app:layout_constraintEnd_toStartOf="@+id/web_button"
        android:contentDescription="@string/boton_fb" />

    <ImageButton
        android:id="@+id/twitter_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/twittericon"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/background_v"
        app:layout_constraintStart_toEndOf="@+id/yt_button"
        android:contentDescription="@string/boton_twitter" />


    <ImageButton
        android:id="@+id/yt_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/yticon"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/background_v"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/boton_yt" />

    <ImageButton
        android:id="@+id/web_button"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/boton_web"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/background_v"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="212dp"
        android:layout_height="185dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="104dp"
        android:src="@drawable/san_marcos_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/background_v_arriba" />


</android.support.constraint.ConstraintLayout>